--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,5 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,intellij+all,virtualenv
+/.idea/
+/sample.ini
