--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,20 @@ fastapi==0.95.1
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+packaging==23.1
 pydantic==1.10.7
 pymongo==4.3.3
+python-certifi-win32==1.6.1
 PyYAML==6.0
 requests==2.28.2
+setuptools-scm==7.1.0
 sniffio==1.3.0
 soupsieve==2.4.1
 starlette==0.26.1
+tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.15
 uvicorn==0.21.1
 watchfiles==0.19.0
 websockets==11.0.1
+wrapt==1.15.0
